--- a/package.json
+++ b/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
+    "@mui/styled-engine-sc": "^5.4.2",
+    "@mui/styles": "^5.4.2",
+    "@react-pdf/renderer": "^1.6.3",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "i": "^0.3.7",
+    "material-ui-treeview": "^5.0.0",
+    "mui-datatables": "^4.0.0",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-to-pdf": "0.0.14",
+    "styled-components": "^5.3.3",
+    "sweetalert2": "^10.16.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
